--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ amplify/backend/amplify-meta.json
 amplify/backend/.temp
 build/
 dist/
-.next/
 node_modules/
 aws-exports.js
 awsconfiguration.json
@@ -20,5 +19,34 @@ amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
 **.sample
-.turbo/
 #amplify-do-not-edit-end
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+.env
+
