--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -23,7 +23,7 @@
     }
   },
   "auth": {
-    "posbackend": {
+    "posbackendfcbeb286fcbeb286": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
@@ -33,12 +33,8 @@
         "usernameAttributes": [],
         "signupAttributes": [],
         "passwordProtectionSettings": {
-          "passwordPolicyMinLength": 6,
-          "passwordPolicyCharacters": [
-            "REQUIRES_LOWERCASE",
-            "REQUIRES_NUMBERS",
-            "REQUIRES_UPPERCASE"
-          ]
+          "passwordPolicyMinLength": "6",
+          "passwordPolicyCharacters": []
         },
         "mfaConfiguration": "ON",
         "mfaTypes": [
